Revision history for Perl extension SVG::TT::Graph.

0.24 Wed 9 Jul 2014 19:23:11
    - Added config.show_path_title to control whether to include new 
      title attribute in path tag (mikejbwhoo)
    - Added TITLE attribute to PATH tag in SHOW DATA section (mikejbwhoo)
    - Added config.show_y_fields to allow for fields array element to
      be shown instead of title attribute used in add_data, looks nice
      when creating non-overlapping bars, default to '0' (mikejbwhoo)

0.23 Mon 4 Feb 2013 21:14:40
    - fix division by zero errors in all graph types (Carsten Wolff)
    - Doc clarification (elnjensen)

0.22 Sun 14 Oct 2012 09:43:58
    - Link to github for issue tracking
    - Allow reversed y-axis (elnjensen)
    - Add missing class for data point labels (snabb)

0.21
  - New type of graph available: XY (written by Florent Angly, but largely based
    on the TimeSeries module by David Meibusch)

0.20
  - Fixed wrong formatting of Y labels in SVG::TT:Graph::BarHorizontal (patch by
    Erin Schönhals)
  - Fixed wrong formatting of Y labels in SVG::TT::Graph::Bar

0.19
  - Fixed warning messages with missing data title (#69691, reported by
    dean@fragfest.com.au, patch by Florent Angly)

0.18 - Thu  5 Jan 2012
  - Added format_x_axis, format_y_axis callback options (Eric Johnson)

0.17 - Wed Jul 20 2011
  - By default, do not compress() or tidy() the SVG
  - Line and Timeseries graphs now have points styled as '.dataPointNN',
    consistently with BarLine graphs (patch from Henrik Pauli, #67834)
  - Added a max_scale_value option to set the maximum value for the Y axis of
    Bar and Line graphs (patch by Bryce and Henrik Pauli, #20475)
  - Repackaged module without extra files (#56718)

0.16 - Sun Apr 18 2010
  - Javascript code in the piechart and timeseries put into a CDATA tag

0.15 - Sat Apr 17 2010  
  - Method get_template() moved from SVG::TT::Graph::* to SVG::TT::Graph to avoid redundancy