@@ -74,6 +74,9 @@ title, subtitle etc.
     'y_label_formatter'      => sub { return @_ },
     'x_label_formatter'      => sub { return @_ },
 
+    'show_path_title'	     => 0,
+    'show_title_fields'	     => 0,
+
     'show_x_title'           => 0,
     'x_title'                => 'X Field names',
 
@@ -297,6 +300,18 @@ A callback subroutine which will format a label on the y axis.  For example:
 
     $graph->y_label_formatter( sub { return '$' . $_[0] } );
 
+=item show_path_title()
+
+Whether to add the title attribute to the data path tags,
+which will show "tooltips" when hovering over the bar area.
+
+=item show_title_fields()
+
+Whether to show field values as title elements in path tag,
+defaults to 0, set to '1' to turn on. Suggest on single
+add_data graphs, for overlapping graphs leave off to see
+the title value used in the add_data call.
+
 =back
 
 =head1 EXAMPLES
@@ -383,6 +398,9 @@ sub _set_defaults {
     'rotate_x_labels'        => 0,
     'x_label_formatter'      => sub { return @_ },
     'y_label_formatter'      => sub { return @_ },
+
+    'show_path_title'	     => 0,
+    'show_title_fields'	     => 0,
     
     'show_y_labels'          => 1,
     'scale_integers'         => 0,
@@ -841,7 +859,16 @@ __DATA__
 
   [% start_x = base_line %]
   [% FOREACH dataset = data %]
-    <path d="M[% (dw * xcount) + x %] [% start_x %] V[% start_x - (dataset.data.$field * divider) %] h[% bar_width %] V[% start_x %] Z" class="fill[% dcount %]"/>
+    [% IF config.show_path_title %]
+      [% IF config.show_title_fields %]
+	<path d="M[% (dw * xcount) + x %] [% start_x %] V[% start_x - (dataset.data.$field * divider) %] h[% bar_width %] V[% start_x %] Z" class="fill[% dcount %]"><title>[% dataset.data.$field %] - [% field %]</title></path>
+      [% ELSE %]
+	<path d="M[% (dw * xcount) + x %] [% start_x %] V[% start_x - (dataset.data.$field * divider) %] h[% bar_width %] V[% start_x %] Z" class="fill[% dcount %]"><title>[% dataset.data.$field %] - [% dataset.title %]</title></path>
+      [% END %]
+    [% ELSE %]
+      <path d="M[% (dw * xcount) + x %] [% start_x %] V[% start_x - (dataset.data.$field * divider) %] h[% bar_width %] V[% start_x %] Z" class="fill[% dcount %]"/>
+    [% END %]
+
     [% IF config.show_data_values %]
       <text x="[% (dw * xcount) + x + (dw / 2) - (bar_gap / 2) %]" y="[% start_x - (dataset.data.$field * divider) - 6 %]" class="dataPointLabel">[% dataset.data.$field %]</text>
     [% END %]
